.kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: acdc
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30004
  selector:
    app: acdc
