.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acdc
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - acdc.demo.insee.io
  rules:
    - host: acdc.demo.insee.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acdc
                port:
                  number: 80
